[tool.poetry]
name = "frl"
version = "0.1.0"
description = "federated learning experiments"
authors = ["frankcholula <lu.phrank@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gym-super-mario-bros = "^7.4.0"
numpy = "<1.24"
flower = "^2.0.1"
torchrl = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
